# Bloom

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  install.ps1  install.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/bloom-buffer/: Cargo.toml
crates/bloom-core/: Cargo.toml
crates/bloom-core/benches/: benchmarks.rs
crates/bloom-core/src/: agenda.rs  block_id_gen.rs  buffer.rs  config.rs  document.rs  editor.rs  error.rs  fts_worker.rs  highlight.rs  hint_updater.rs  import.rs  index.rs  journal.rs  keymap.rs  lib.rs  parse_tree.rs  parser.rs  picker.rs  refactor.rs  render.rs  resolver.rs  session.rs  store.rs  template.rs  timeline.rs  types.rs  uuid.rs  watcher.rs  whichkey.rs  window.rs  wizard.rs
crates/bloom-core/src/agenda/: agenda.rs  mod.rs
crates/bloom-core/src/align/: engine.rs  mod.rs
crates/bloom-core/src/buffer/: edit.rs  mod.rs  rope.rs  undo.rs
crates/bloom-core/src/config/: config.rs  mod.rs
crates/bloom-core/src/editor/: commands.rs  event_loop.rs  files.rs  init.rs  keys.rs  mod.rs  navigation.rs  notifications.rs  page_history.rs  pickers.rs  render.rs  section_mirror.rs
crates/bloom-core/src/history/: mod.rs  thread.rs
crates/bloom-core/src/index/: fts.rs  indexer.rs  mod.rs  query.rs  schema.rs  writer.rs
crates/bloom-core/src/journal/: journal.rs  mod.rs
crates/bloom-core/src/keymap/: dispatch.rs  mod.rs  platform.rs  traits.rs  user.rs
crates/bloom-core/src/linker/: backlinks.rs  hints.rs  mod.rs  orphan.rs  resolver.rs
crates/bloom-core/src/mcp/: config.rs  mod.rs  security.rs  server.rs  tools.rs  types.rs
crates/bloom-core/src/parser/: extensions.rs  frontmatter.rs  highlight.rs  markdown.rs  mod.rs  traits.rs
crates/bloom-core/src/picker/: filter.rs  mod.rs  nucleo.rs  picker.rs  source.rs
crates/bloom-core/src/query/: cache.rs  compile.rs  execute.rs  mod.rs  parse.rs  schema.rs  validate.rs
crates/bloom-core/src/refactor/: merge.rs  mod.rs  move_block.rs  split.rs
crates/bloom-core/src/render/: frame.rs  layout.rs  measure.rs  mod.rs  search_highlight.rs  span_cache.rs  viewport.rs
crates/bloom-core/src/session/: mod.rs  session.rs
crates/bloom-core/src/store/: disk_writer.rs  local.rs  mod.rs  traits.rs  watcher.rs
crates/bloom-core/src/template/: builtins.rs  mod.rs  template.rs
crates/bloom-core/src/theme/: mod.rs  palette.rs  resolve.rs
crates/bloom-core/src/timeline/: mod.rs  timeline.rs
crates/bloom-core/src/vault/: adopt.rs  conflict.rs  lock.rs  migrate.rs  mod.rs  paths.rs  setup.rs
crates/bloom-core/src/vim/: grammar.rs  macros.rs  mod.rs  motion.rs  operator.rs  register.rs  state.rs  text_object.rs
crates/bloom-core/src/which_key/: mod.rs  tree.rs
crates/bloom-core/src/window/: mod.rs  window.rs
crates/bloom-core/tests/: e2e.rs  index_module.rs  integration.rs  journal.rs  picker_core.rs  properties.proptest-regressions  properties.rs  resolver_core.rs  smoke_test_vault.rs  watcher_core.rs
crates/bloom-error/: Cargo.toml
crates/bloom-gui/: Cargo.toml  tauri.conf.json
crates/bloom-gui/capabilities/: default.json
crates/bloom-gui/frontend/: index.html
crates/bloom-gui/icons/: README.md  icon.icns
crates/bloom-gui/src/: canvas.rs  index.html  keys.rs  layout.rs  main.rs  remote.rs  theme.rs  wrap.rs
crates/bloom-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/bloom-gui/src-tauri/src/: lib.rs  main.rs
crates/bloom-gui/src/draw/: drawer.rs  inline.rs  mod.rs  notification.rs  overlay.rs  pane.rs
crates/bloom-history/: Cargo.toml
crates/bloom-history/src/: lib.rs  repo.rs
crates/bloom-history/tests/: integration.rs
crates/bloom-import/: Cargo.toml
crates/bloom-mcp/: Cargo.toml
crates/bloom-md/: Cargo.toml
crates/bloom-md/src/: lib.rs  types.rs
crates/bloom-md/src/parser/: extensions.rs  frontmatter.rs  highlight.rs  markdown.rs  mod.rs  traits.rs
crates/bloom-md/src/theme/: mod.rs  palette.rs  resolve.rs
crates/bloom-store/: Cargo.toml
crates/bloom-store/src/: disk_writer.rs  lib.rs  local.rs  traits.rs  watcher.rs
crates/bloom-test-harness/: Cargo.toml
crates/bloom-test-harness/examples/: debug_diff.rs  demo_vault.rs
crates/bloom-test-harness/src/: lib.rs
crates/bloom-test-harness/tests/: animations.rs
crates/bloom-tui/: Cargo.toml
crates/bloom-tui/src/: input.rs  lib.rs  main.rs  render.rs  scroll.rs  theme.rs  wrap.rs
crates/bloom-tui/src/render/: agenda.rs  calendar.rs  context_strip.rs  dialog.rs  inline_menu.rs  mod.rs  notifications.rs  page_history.rs  pane.rs  picker.rs  status_bar.rs  temporal_strip.rs  timeline.rs  undo_tree.rs  view.rs  which_key.rs  wizard.rs
crates/bloom-tui/tests/: screenshots.rs
crates/bloom-vim/: Cargo.toml
deleted/: deleted.002  index
docs/: ADAPTIVE_LAYOUT.md  AGENT_WORKFLOW.md  API_SURFACES.md  ARCHITECTURE.md  AUTO_ALIGNMENT.md  BLOCK_IDENTITY.md  CRATE_STRUCTURE.md  DEBUGGABILITY.md  DESIGN_DECISIONS.md  FILE_FORMAT.md  GOALS.md  GUI.md  GUI_DESIGN.md  HISTORY.md  IDEA_BRIEF_TEMPLATE.md  IMPLEMENTATION.md  JOURNAL.md  KEYBINDINGS.md  PARSE_TREE.md  PICKER_SURFACES.md  SETUP_WIZARD.md  TEMPORAL_NAVIGATION.md  THEMING.md  UNIFIED_BUFFER.md  USE_CASES.md  WINDOW_LAYOUTS.md  WORD_WRAP.md
docs-site/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: getting-started.md
docs/lab/: AUTO_MERGE.md  BLOCK_IDENTITY.md  BLOCK_ID_METADATA.md  DAY_VIEW.md  EMERGENCE.md  HISTORY.md  JOURNAL_REDESIGN.md  LIVE_VIEWS.md  MIRRORING.md  README.md  TIME_TRAVEL.md  UNIFIED_BUFFER.md  UNIFIED_DOCUMENT_LAYER.md  UNIFIED_DOCUMENT_LAYER_ARCHITECTURE.md  UNIFIED_DOCUMENT_LAYER_OPTIONS.md
docs/planning/: ANIMATED_DOCS.md  AUTO_MERGE.md  HISTORY_PRODUCTION_HARDENING.md  HISTORY_PRODUCTION_HARDENING_ARCHITECTURE.md  HISTORY_PRODUCTION_HARDENING_IMPLEMENTATION_PLAN.md  LIVE_VIEWS.md  UNDO_DELTA_PERSISTENCE.md  UNIFIED_DOCUMENT_LAYER.md  (+3 more)
hooks/: pre-commit  pre-push
scripts/: assemble-gifs.js  package-lock.json  package.json  render-animations.js
test-vault/: README.md
(+34 files in other folders)
