[workspace]
resolver = "2"
members = [
    "crates/bloom-error",
    "crates/bloom-buffer",
    "crates/bloom-md",
    "crates/bloom-vim",
    "crates/bloom-store",
    "crates/bloom-core",
    "crates/bloom-history",
    "crates/bloom-gui",
    "crates/bloom-mcp",
    "crates/bloom-import",
    "crates/bloom-test-harness",
]
