[package]
name = "bloom-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
nucleo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
crossbeam = "0.8"
notify = "6"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
bloom-test-harness = { path = "../bloom-test-harness" }
