[package]
name = "bloom-gui"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bloom-core = { path = "../bloom-core" }
crossbeam = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2", features = ["devtools"] }
tracing = "0.1"

[build-dependencies]
tauri-build = "2"
