[package]
name = "bloom-gui"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bloom-core = { path = "../bloom-core" }
bloom-md = { path = "../bloom-md" }
crossbeam = "0.8.4"
iced = { version = "0.14", features = ["canvas", "advanced", "tokio"] }
tracing = "0.1"

# Packaging prep for cargo-bundle / CI-based .dmg/.msi builds.
[package.metadata.bundle]
name = "Bloom"
identifier = "com.bloom.editor"
icon = ["icons/icon.icns"]
