[package]
name = "bloom-gui"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bloom-core = { path = "../bloom-core" }
bloom-md = { path = "../bloom-md" }
arboard = "3"
crossbeam = "0.8.4"
iced = { version = "0.14", features = ["canvas", "advanced", "tokio"] }
tracing = "0.1"

# Packaging prep for cargo-bundle / CI-based .dmg/.msi builds.
[package.metadata.bundle]
name = "Bloom"
identifier = "com.bloom.editor"
icon = [
    "icons/icon.icns",
    "icons/icon.ico",
    "icons/icon.png",
]
category = "public.app-category.productivity"
short_description = "Local-first keyboard-driven note-taking"
copyright = "Copyright (c) Hindol Adhya"
