[package]
name = "bloom-store"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bloom-error = { path = "../bloom-error" }
# Filesystem watcher
notify = "6"
# Cross-thread channels
crossbeam = "0.8"
# Structured logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
