[package]
name = "bloom-test-harness"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bloom-core = { path = "../bloom-core" }
bloom-history = { path = "../bloom-history" }
tempfile = "3"
insta = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
