[package]
name = "bloom-tui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bloom-core = { path = "../bloom-core" }
chrono = "0.4"
crossbeam = "0.8"
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.2"

[dev-dependencies]
bloom-test-harness = { path = "../bloom-test-harness" }
tempfile = "3"
