[package]
name = "bloom-gui"
version = "0.1.0"
description = "Bloom 🌱 — GUI frontend (Tauri)"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bloom_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
bloom-core = { path = "../../bloom-core" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
